Fix project already dispossed errors.
Signed-off-by: Edward Mezarina <mezarina@us.ibm.com>